# OpenGeode-Geosciences

./: .gitignore  .releaserc  CMakeLists.txt  COPYLEFT  LICENSE  README.md  azure-pipelines.yml  upgrade-guide.md
.github/workflows/: CD.yml  CI.yml  CI_schedule.yml  deploy.yml  prepare_deploy.yml  prepare_pr.yml  schedule.yml  test.yml  test_pr.yml
bindings/python/: CMakeLists.txt  __init__.py  explicit.py  geosciences.py  implicit.py  requirements.in  requirements.txt  setup.py
bindings/python/src/: CMakeLists.txt  common.hpp  input.h  input.hpp
bindings/python/src/explicit/: CMakeLists.txt  explicit.cpp
bindings/python/src/geosciences/: CMakeLists.txt  geosciences.cpp
bindings/python/src/implicit/: CMakeLists.txt  factory.h  implicit.cpp
bindings/python/tests/: CMakeLists.txt
bindings/python/tests/explicit/: CMakeLists.txt  test-py-cross-section.py  test-py-geographic-coordinate-system.py  test-py-structural-model.py
cmake/: MyModuleConfig.cmake.in  OpenGeode-GeosciencesConfig.cmake.in  OpenGeode_GeosciencesConfig.cmake.in
include/geode/geosciences/: common.h  project.hpp
include/mylib/: hello_world.h
src/geode/: CMakeLists.txt
src/geode/geosciences/: CMakeLists.txt  common.cpp
src/geode/geosciences/builder/: faults_builder.cpp  horizons_builder.cpp  structural_model_builder.cpp
src/geode/geosciences/core/: bitsery_archive.cpp  fault.cpp  faults.cpp  horizon.cpp  horizons.cpp  structural_model.cpp
src/geode/geosciences/explicit/: CMakeLists.txt  common.cpp
src/geode/geosciences/explicit/geometry/: geographic_coordinate_system.cpp  geographic_coordinate_system_helper.cpp
src/geode/geosciences/explicit/mixin/builder/: fault_blocks_builder.cpp  faults_builder.cpp  horizons_builder.cpp  stratigraphic_units_builder.cpp
src/geode/geosciences/explicit/mixin/core/: bitsery_archive.cpp  fault.cpp  fault_block.cpp  fault_blocks.cpp  faults.cpp  horizon.cpp  horizons.cpp  stratigraphic_unit.cpp  stratigraphic_units.cpp
src/geode/geosciences/explicit/representation/builder/: cross_section_builder.cpp  structural_model_builder.cpp
src/geode/geosciences/explicit/representation/builder/helpers/: structural_model_fault_blocks_builder.cpp
src/geode/geosciences/explicit/representation/core/: cross_section.cpp  structural_model.cpp
src/geode/geosciences/explicit/representation/core/detail/: clone.cpp  helpers.cpp
src/geode/geosciences/explicit/representation/io/: cross_section_input.cpp  cross_section_output.cpp  structural_model_input.cpp  structural_model_output.cpp
src/geode/geosciences/explicit/representation/io/geode/: geode_cross_section_input.cpp  geode_cross_section_output.cpp  geode_structural_model_input.cpp  geode_structural_model_output.cpp
src/geode/geosciences/geometry/: geographic_coordinate_system.cpp  geographic_coordinate_system_helper.cpp
src/geode/geosciences/implicit/: CMakeLists.txt  common.cpp
src/geode/geosciences/implicit/mixin/builder/: stratigraphic_relationships_builder.cpp
src/geode/geosciences/implicit/mixin/core/: stratigraphic_relationships.cpp
src/geode/geosciences/implicit/representation/builder/: horizons_stack_builder.cpp  implicit_cross_section_builder.cpp  implicit_structural_model_builder.cpp  stratigraphic_model_builder.cpp  stratigraphic_section_builder.cpp  stratigraphic_units_stack_builder.cpp
src/geode/geosciences/implicit/representation/builder/helpers/: implicit_structural_model_stratigraphic_blocks_builder.cpp
src/geode/geosciences/implicit/representation/core/: horizons_stack.cpp  implicit_cross_section.cpp  implicit_structural_model.cpp  stratigraphic_model.cpp  stratigraphic_section.cpp  stratigraphic_units_stack.cpp
src/geode/geosciences/implicit/representation/core/detail/: helpers.cpp
src/geode/geosciences/implicit/representation/io/: horizons_stack_input.cpp  horizons_stack_output.cpp  implicit_cross_section_input.cpp  implicit_cross_section_output.cpp  implicit_structural_model_input.cpp  implicit_structural_model_output.cpp  stratigraphic_model_input.cpp  stratigraphic_model_output.cpp  stratigraphic_section_input.cpp  stratigraphic_section_output.cpp  stratigraphic_units_stack_input.cpp  stratigraphic_units_stack_output.cpp
src/geode/geosciences/implicit/representation/io/geode/: geode_horizons_stack_input.cpp  geode_implicit_cross_section_input.cpp  geode_implicit_cross_section_output.cpp  geode_implicit_structural_model_input.cpp  geode_implicit_structural_model_output.cpp  geode_stratigraphic_units_stack_input.cpp
src/geode/geosciences/io/: structural_model_input.cpp  structural_model_output.cpp
src/geode/geosciences/mixin/builder/: fault_blocks_builder.cpp  faults_builder.cpp  horizons_builder.cpp  layers_builder.cpp  stratigraphic_units_builder.cpp
src/geode/geosciences/mixin/core/: bitsery_archive.cpp  fault.cpp  fault_block.cpp  fault_blocks.cpp  faults.cpp  geographic_coordinate_system.cpp  horizon.cpp  horizons.cpp  layer.cpp  layers.cpp  stratigraphic_unit.cpp  stratigraphic_units.cpp
src/geode/geosciences/representation/builder/: cross_section_builder.cpp  structural_model_builder.cpp
src/geode/geosciences/representation/core/: cross_section.cpp  structural_model.cpp
src/geode/geosciences/representation/io/: cross_section_input.cpp  cross_section_output.cpp  structural_model_input.cpp  structural_model_output.cpp
src/mylib/: CMakeLists.txt  common.cpp  hello_world.cpp
tests/: CMakeLists.txt  tests_config.h.in  tests_config.hpp.in
tests/data/: modelA2.og_strm  model_A2.ml  test_HorizonStack_v0.og_hst3d  test_section.og_sctn  vri2.og_strm
tests/explicit/: CMakeLists.txt  test-cross-section.cpp  test-geographic-coordinate-system.cpp  test-structural-model-fault-blocks-builder.cpp  test-structural-model.cpp
tests/geosciences/: CMakeLists.txt  test-cross-section.cpp  test-geographic-coordinate-system.cpp  test-structural-model.cpp
tests/implicit/: CMakeLists.txt  test-horizons-stack.cpp  test-stratigraphic-model.cpp  test-stratigraphic-section.cpp  test-stratigraphic-units-stack.cpp
tests/mylib/: CMakeLists.txt  test-hello-world.cpp
(+292 files in other folders)
