
set(sources
    "${lib_source_dir}/mixin/builder/faults_builder.cpp"
    "${lib_source_dir}/mixin/builder/horizons_builder.cpp"
    "${lib_source_dir}/mixin/core/bitsery_archive.cpp"
    "${lib_source_dir}/mixin/core/fault.cpp"
    "${lib_source_dir}/mixin/core/faults.cpp"
    "${lib_source_dir}/mixin/core/horizon.cpp"
    "${lib_source_dir}/mixin/core/horizons.cpp"
    "${lib_source_dir}/representation/builder/structural_model_builder.cpp"
    "${lib_source_dir}/representation/io/structural_model_input.cpp"
    "${lib_source_dir}/representation/io/structural_model_output.cpp"
)
set(public_headers
    "${lib_include_dir}/common.h"
    "${lib_include_dir}/mixin/builder/faults_builder.h"
    "${lib_include_dir}/mixin/builder/horizons_builder.h"
    "${lib_include_dir}/mixin/core/bitsery_archive.h"
    "${lib_include_dir}/mixin/core/fault.h"
    "${lib_include_dir}/mixin/core/faults.h"
    "${lib_include_dir}/mixin/core/horizon.h"
    "${lib_include_dir}/mixin/core/horizons.h"
    "${lib_include_dir}/representation/builder/structural_model_builder.h"
    "${lib_include_dir}/representation/core/structural_model.h"
    "${lib_include_dir}/representation/io/structural_model_input.h"
    "${lib_include_dir}/representation/io/structural_model_output.h"
)
set(advanced_headers
    "${lib_include_dir}/mixin/core/detail/components_storage.h"
    "${lib_include_dir}/representation/io/detail/geode_structural_model_input.h"
    "${lib_include_dir}/representation/io/detail/geode_structural_model_output.h"
)
target_link_libraries(${target_name}
    PRIVATE
        OpenGeode::basic
        OpenGeode::model
)
